--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,7 +47,7 @@ test:
 
 about:
   home: http://www.gtk.org/
-  license: LGPL-2.1
+  license: LGPL-2.1-or-later
   license_family: LGPL
   license_file: COPYING
   summary: D-Bus-based implementation of AT-SPI accessibility framework
