--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -2,38 +2,37 @@
 # This file is licensed under a 3-clause BSD license; see LICENSE.txt.
 
 {% set name = "at-spi2-core" %}
-{% set version = "2.36.1" %}
+{% set version = "2.38.0" %}
 {% set version_majmin = '.'.join(version.split('.', 2)[:2]) %}
-{% set sha256 = "97417b909dbbf000e7b21062a13b2f1fd52a336f5a53925bb26d27b65ace6c54" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: http://ftp.gnome.org/pub/gnome/sources/{{ name }}/{{ version_majmin }}/{{ name }}-{{ version }}.tar.xz
-  sha256: {{ sha256 }}
+  url: https://download.gnome.org/sources/{{ name }}/{{ version_majmin }}/{{ name }}-{{ version }}.tar.xz
+  sha256: 84e36c3fe66862133f5fe229772b76aa2526e10de5014a3778f2fa46ce550da5
 
 build:
   number: 0
-  skip: true  # [win]
+  skip: true  # [not linux]
   run_exports:
     - {{ pin_subpackage('at-spi2-core', max_pin='x.x') }}
-  missing_dso_whitelist:   # [linux]
-    - '*/libX11.so*'  # [linux]
+  missing_dso_whitelist:
+    - '*/libX11.so*'
 
 requirements:
   build:
     - meson
     - ninja
     - pkg-config
-    - pthread-stubs  # [linux]
+    - pthread-stubs
     - {{ compiler('c') }}
-    - {{ cdt('libx11-devel') }}  # [linux]
-    - {{ cdt('libxi-devel') }}  # [linux]
-    - {{ cdt('libxfixes-devel') }}  # [linux]
-    - {{ cdt('libxtst-devel') }}  # [linux]
-    - {{ cdt('xorg-x11-proto-devel') }}  # [linux]
+    - {{ cdt('libx11-devel') }}
+    - {{ cdt('libxi-devel') }}
+    - {{ cdt('libxfixes-devel') }}
+    - {{ cdt('libxtst-devel') }}
+    - {{ cdt('xorg-x11-proto-devel') }}
   host:
     - dbus
     - gettext
@@ -42,8 +41,8 @@ requirements:
 
 test:
   commands:
-    - test -f $PREFIX/include/at-spi-2.0/atspi/atspi.h  # [unix]
-    - test -f $PREFIX/lib/libatspi${SHLIB_EXT}  # [unix]
+    - test -f $PREFIX/include/at-spi-2.0/atspi/atspi.h
+    - test -f $PREFIX/lib/libatspi${SHLIB_EXT}
 
 about:
   home: http://www.gtk.org/
