--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,7 @@ requirements:
     - ninja
     - pkg-config
     - pthread-stubs
+    - setuptools  # needed for gobject-introspection, for now
     - {{ compiler('c') }}
     - {{ stdlib("c") }}
   host:
